<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="visible" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/spacing_small"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/spacing_tiny"
        app:contentPadding="@dimen/spacing_tiny"
        tools:visibility="visible">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_team" />

                <TextView
                    android:id="@+id/tvTeams"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Жирона - Леганес" />

                <View style="@style/HorizontalLine" />

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_time" />


                <TextView
                    android:id="@+id/tvTime"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Завтра в 23:00 МСК" />


                <View style="@style/HorizontalLine" />

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_tournament" />


                <TextView
                    android:id="@+id/tvTournament"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Испания. Примера" />

                <View style="@style/HorizontalLine" />

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_place" />


                <TextView
                    android:id="@+id/tvPlace"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Стадион Монтиливи, Жирона" />

                <View style="@style/HorizontalLine" />

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_article" />


                <TextView
                    android:id="@+id/tvHeader1"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="«Жирона»" />

                <TextView
                    android:id="@+id/tvText1"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="«Жирона» в минувшем туре играла на выезде против «Севильи». Поединок был важен в плане шансов каталонского клуба вмешаться в распределение путевок в еврокубки. Как оказалось, пока еще «жиронцам» рановато на международную арену. Единственный точный удар «нервионцев» в конце первого тайма оказался победным.Поражение от «Севильи» прервало неплохую серию подопечных Пабло Мачина, на протяжении которой они сыграли на выезде вничью с мадридским «Атлетико» 1:1 и «Малагой» 0:0, а также одержали две домашние победы над «Лас-Пальмасом» 6:0 и «Атлетиком» Бильбао 2:0. В целом за шесть предыдущих домашних поединков «Жирона» уступила только «Алавесу» 2:3. В тоже время к выше указанным победам можно также добавить за этот период успех в матчах с мадридским «Реалом» 3:2 и «Хетафе» 1:0.В лазарете у каталонцев Хосе Аурелио Суарес, Пере Понс и Дуглас Луис." />

                <TextView
                    android:id="@+id/tvHeader2"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="«Леганес»" />

                <TextView
                    android:id="@+id/tvText2"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="«Леганес» в турнирной таблице занимает 12-е место, отставая от десятой «Жироны» на два очка, хотя и сыграл на одну встречу меньше.«Леганес» очень неплохо выступал в национальном Кубке, где завершил выступление на стадии полуфинала. Игра на двух фронтах сказалась на результатах команды в январе. В пяти последних турах «лесники» одержали всего одну победу – дома над «Эспаньолом» 3:2. Кроме этого два поединка завершили вничью – с «Алавесом» и «Хетафе», причем оба на выезде, а также уступили «Бетису» и «Эйбару». Хотя в целом на выезде «Леганес» играет слабо. На полях соперников подопечные Асьера Гаритано не побеждали уже восемь матчей подряд, уступив в пяти из них.Не сыграет из-за дисквалификации Димитриос Сиовас. В лазарете Александр Шимановски и Мауро дос Сантос." />

                <TextView
                    android:id="@+id/tvHeader3"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="Статистика и личные встречи" />

                <TextView
                    android:id="@+id/tvText3"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="«Жирона» выиграла дома в Примере три последних матча подряд, не пропустив ни гола.\n • «Леганес» проиграл в чемпионате пять из восьми предыдущих гостевых поединков.\n • В пяти последних матчах «Жироны» в Примере забивала только одна команда.\n • Из 12 гостевых встреч «Леганеса» в девяти забивала только одна команда.\n • Три последних очных поединка между соперниками завершились вничью." />

                <View style="@style/HorizontalLine" />

                <TextView
                    style="@style/MyTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_prediction" />


                <TextView
                    android:id="@+id/tvPrediction"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="«Жирона» в родных стенах редко теряла очки в последнее время  – четыре победы и одна ничья в шести последних встречах, причем  и пропустили в пяти предыдущих домашних поединках каталонцы только дважды. «Леганес» слабо играет в гостях, к тому ни разу в истории не удалось обыграть «жиронцев» на их поле." />

            </LinearLayout>
        </ScrollView>


    </android.support.v7.widget.CardView>

</RelativeLayout>

